--- a/config.json
+++ b/config.json
@@ -4,12 +4,9 @@
     "gradient_accumulate_every": 1,
     "train_lr": 0.0001,
     "train_num_steps": 1000000,
-    "ema_update_every": 10,
-    "ema_decay": 0.995,
     "adam_betas": [0.9, 0.99],
     "save_and_sample_every":1000,
     "timesteps":1000,
-    "sampling_timesteps":1000,
     "logs_folder" : "logs/tts",
     "seed": 1234,
     "epochs": 10000,
@@ -19,28 +16,22 @@
     ],
     "num_workers": 32,
     "eps": 1e-09,
-    "keep_ckpts": 3,
-    "all_in_mem": false
+    "keep_ckpts": 3
   },
   "data": {
-    "training_files": "../AISHELL3_processed_processed",
+    "training_files": "./dataset_processed",
+    "val_files": "./dataset_processed",
     "sampling_rate": 24000,
     "hop_length": 256,
-    "language" : "en"
+    "language" : "zh",
+    "add_blank" : true,
+    "min_text_len": 1,
+    "max_text_len": 300
   },
   "phoneme_encoder":{
     "hidden_channels":512,
     "n_layers":6,
     "p_dropout":0.1
-  },
-  "f0_predictor":
-  {
-    "in_channels":512,
-    "hidden_channels":512,
-    "out_channels":1,
-    "attention_layers":10,
-    "n_heads":8,
-    "p_dropout":0.5
   },
   "duration_predictor":{
     "in_channels":512,
