--- a/config.json
+++ b/config.json
@@ -28,7 +28,7 @@
     "hop_length": 256,
     "window_size":1024,
     "language" : "zh",
-    "add_blank" : false,
+    "add_blank" : true,
     "min_text_len": 1,
     "max_text_len": 300,
     "win_length": 2048,
